Project 0/CustomPackage/main/default/objects/Game_Reviews__c/Game_Reviews__c.object-meta.xml
<CustomObject>
    <label>Game Reviews</label>
    <nameField>
        <label>Review Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Game Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>