Project 0/CustomPackage/main/default/objects/Game_Reviews__c/fields/Game__c.field-meta.xml
<CustomField>
    <fullName>Game__c</fullName>
    <label>Game</label>
    <length>40</length>
    <type>Text</type>
</CustomField>