Project 0/CustomPackage/main/default/objects/Game_Reviews__c/fields/Gamer__c.field-meta.xml
<CustomField>
    <fullName>Gamer__c</fullName>
    <formula>Reviewer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gamer</label>
    <type>Text</type>
</CustomField>