Project 0/CustomPackage/main/default/objects/Game_Reviews__c/fields/My_Game__c.field-meta.xml
<CustomField>
    <fullName>My_Game__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>My Game</label>
    <referenceTo>My_Games__c</referenceTo>
    <relationshipLabel>Game Reviews</relationshipLabel>
    <relationshipName>Game_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>