Project 0/CustomPackage/main/default/objects/Game_Reviews__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer</label>
    <referenceTo>Game_Account__c</referenceTo>
    <relationshipName>Ratings</relationshipName>
    <type>Lookup</type>
</CustomField>