Project 0/CustomPackage/main/default/objects/Game_Reviews__c/fields/User_Star_Rating__c.field-meta.xml
<CustomField>
    <fullName>User_Star_Rating__c</fullName>
    <label>User Star Rating</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>