Project 0/CustomPackage/main/default/objects/Game_Reviews__c/validationRules/IsThisYourReview.validationRule-meta.xml
<ValidationRule>
    <fullName>IsThisYourReview</fullName>
    <active>false</active>
    <errorConditionFormula>CreatedById &lt;&gt;  $User.Id</errorConditionFormula>
    <errorMessage>This is not your review!</errorMessage>
</ValidationRule>