Project 0/CustomPackage/main/default/objects/Game_Reviews__c/validationRules/Only_up_to_5_stars.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_up_to_5_stars</fullName>
    <active>true</active>
    <errorConditionFormula>(User_Star_Rating__c &gt; 5) ||  (User_Star_Rating__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>User_Star_Rating__c</errorDisplayField>
    <errorMessage>Rating has to be between 0 - 5</errorMessage>
</ValidationRule>